add and reorganize Community pages and nav (#2069)
* Spike out new Community docs section and Contribution Guide

* Add examples

* Add Q&A example

* Adding Card component for use

* Add icon folder structure

* Add join the community initial draft

* Add styles for card components on community page

* Fix styles and sidebar for Community section

* Update sidebar and urls

* Register Card component in MDX component list

* Lowercase card in MDX see if that works

* Fix id for contribute page

* Fix sidebar and top nav links

* Update website/src/components/collapsible/index.js

Co-authored-by: Jason Karlavige <jkarlavige@gmail.com>

* Rework long discussions (#2124)

* Rework long lived discussions page to reflect change to Discourse

* Fix chnaged link on IDE beta for Discourse

* Reword forum main page

* Add and render blurb (maybe)

* try trigger CI by editing a md file

* Dont restrct to first post to try find more blurbs

* Revert "Dont restrct to first post to try find more blurbs"

This reverts commit e64c4c04eb5f6cbe2d2d24ffc3e85aa5f19bb509.

* Remove redundant change

* Remove redundant qestion mark

* Add inclusivity statement

* Change to blockquote and fix CSS

* Statement -> on the community forum

* Changing 302 to 301 for new IA redirects

* Update _redirects

Co-authored-by: Leona B. Campbell <3880403+runleonarun@users.noreply.github.com>

* Update _redirects

Co-authored-by: Leona B. Campbell <3880403+runleonarun@users.noreply.github.com>

* Update references to stack overflow with forum

* Update long-lived-discussions-guidelines.md

* apply changes to sidebars.js

* trigger full ci

* Switch back

* Fix broken link

* Update _redirects

* Changes to contributing guide for forum

* Remove repeated word community from guidelines

* lowrrcase asking

* Remove remembers, change ide-beta to link to .forum

* Update sidebars.js

* Update _redirects

Co-autho

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1522,3 +1522,23 @@ footer #ot-sdk-btn.optanon-show-settings:hover{
 .events-page section, section.discourse-forum-page {
   padding: 4rem 0;
 }
+
+/* utilities */
+.grid--3-col {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: var(--ifm-spacing-horizontal)
+}
+
+@media(min-width: 996px) {
+  .grid--3-col {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: calc(var(--ifm-spacing-horizontal) * 2);
+  }
+}
+
+.community-home section {
+  margin: calc(5vh) auto calc(2vh);
+  max-width: var(--ifm-container-width-xl);
+  padding: 0 var(--ifm-spacing-horizontal);
+}
