--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1559,6 +1559,13 @@ section.discourse-forum-page {
   padding: 0 var(--ifm-spacing-horizontal);
 }
 
+.home section.from-the-blog {
+  margin-bottom: 0;
+}
+.home section.from-the-community {
+  margin-top: 0;
+}
+
 .home .resource-section h2 {
   margin: 0;
 }
@@ -1642,6 +1649,9 @@ section > h2:not(.resource-section) {
 .home .swiper.swiper-initialized.swiper-horizontal.swiper-pointer-events.swiper-backface-hidden {
   padding-right: 3rem;
   padding-left: 3rem;
+  padding-top: 0rem;
+  padding-bottom: 6.25rem;
+  margin-bottom: 0;
 }
 
 .home .swiper-button-next, .home .swiper-button-prev {
