--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1688,6 +1688,19 @@ section > h2:not(.resource-section) {
   }
 }
 
+.grid--2-col {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: var(--ifm-spacing-horizontal)
+}
+
+@media(min-width: 996px) {
+  .grid--2-col {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: calc(var(--ifm-spacing-horizontal) * 2);
+  }
+}
+
 .justify-content-center {
   justify-content: center !important;
 }
