--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1704,3 +1704,8 @@ section > h2:not(.resource-section) {
 .justify-content-center {
   justify-content: center !important;
 }
+
+/* Discourse Comment Embed */
+.commentEmbed {
+  margin-top: 2rem;
+}
