--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -149,9 +149,14 @@ html[data-theme="dark"] .api-content table td p {
   color: var(--color-orange);
 }
 
+table {
+  width: 100%;
+  table-layout: fixed;
+  display: table;
+}
+
 table td {
   vertical-align: top;
-  width: 20%;
 }
 
 html[data-theme="dark"] table td {
