--- a/website/src/components/blogPostCard/styles.module.css
+++ b/website/src/components/blogPostCard/styles.module.css
@@ -18,15 +18,23 @@
   padding: 0;
 }
 
-.contentContainer {
+.imageContentContainer {
   padding: 2.5rem 2.5rem 1.5rem 2.5rem;
 }
 
-.imageContainer {
+.contentContainer {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-flow: wrap;
+}
+
+.imageContentContainer {
   width: 100%;
   border-radius: var(--border-radius) var(--border-radius) 0px 0px;
   min-height: 200px;
 }
+
 
 .cardWrapper, .cardWrapper article {
   height: 100%;
@@ -47,9 +55,11 @@
 a.ctaLink {
   color: #009999;
   font-weight: 600;
+  margin-top: auto;
 }
 a.ctaLink:after {
   content: ' →';
+  margin-left: 5px;
 }
 
 .icon {
