--- a/website/src/components/blogPostCard/styles.module.css
+++ b/website/src/components/blogPostCard/styles.module.css
@@ -18,8 +18,9 @@
   padding: 0;
 }
 
-.imageContentContainer {
+.contentContainer.imageContentContainer {
   padding: 2.5rem 2.5rem 1.5rem 2.5rem;
+  display: block;
 }
 
 .contentContainer {
