--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1162,7 +1162,7 @@ html[data-theme="dark"] .breadcrumbs__item--active .breadcrumbs__link {
     max-width: inherit;
   }
 
-  html.docs-version-current .navbar__brand {
+  .dbt__brand {
     background-color: var(--ifm-background-color);
     border-right: 1px solid var(--ifm-toc-border-color);
   }
@@ -1173,7 +1173,7 @@ html[data-theme="dark"] .breadcrumbs__item--active .breadcrumbs__link {
 }
 
 @media (min-width: 997px) {
-  html.docs-version-current .navbar__brand {
+  .dbt__brand {
     padding: 0 var(--ifm-navbar-padding-horizontal) 0 0;
     min-height: var(--ifm-navbar-height);
     max-height: var(--ifm-navbar-height);
