adjust hero component to hide graphic if false

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1727,3 +1727,5 @@ section > h2:not(.resource-section) {
 .justify-content-center {
   justify-content: center !important;
 }
+
+/* Community Spotlight Page */
