--- a/website/src/components/community/styles.module.css
+++ b/website/src/components/community/styles.module.css
@@ -22,6 +22,10 @@ header.spotlightMemberCard {
   margin-bottom: .5rem !important;
   color: #009999;
 }
+.spotlightMemberContent .spotlightMemberDescription {
+  margin-top: 1rem;
+  font-size: 1.125rem;
+}
 .spotlightMemberContent .spotlightMemberInfo span {
   font-size: 1.125rem;  
 }
