--- a/website/src/components/community/styles.module.css
+++ b/website/src/components/community/styles.module.css
@@ -30,16 +30,19 @@ header.spotlightMemberCard {
   font-size: 1.125rem;  
 }
 
-@media (min-width: 556px) {
+@media (min-width: 778px) {
   header.spotlightMemberCard {
       padding: 3rem 0;
     }
   .spotlightMemberCard .spotlightMemberImgContainer {
-    margin-right: 2rem;
     flex: 0 0 346px;
+    margin-right: 2rem;
   }
   .spotlightMemberCard .spotlightMemberImgContainer img {
     margin: 0;
+  }
+  .spotlightMemberContent {
+    flex: 0 0 calc(100% - 346px - 2rem);
   }
   .spotlightMemberContent .spotlightMemberHeader {
     font-size: 2.813rem !important;
