--- a/website/src/components/community/styles.module.css
+++ b/website/src/components/community/styles.module.css
@@ -3,7 +3,7 @@
   flex-flow: row wrap;
 }
 header.spotlightMemberCard {
-  padding: 1rem 0 3rem;
+  padding: 2rem 0;
 }
 .spotlightMemberCard .spotlightMemberImgContainer {
   flex: 0 0 100%;
@@ -40,7 +40,7 @@ header.spotlightMemberCard {
 }
 
 @media (min-width: 778px) {
-  header.spotlightMemberCard {
+  .spotlightMemberCard {
       padding: 3rem 0;
     }
   .spotlightMemberCard .spotlightMemberImgContainer {
