make image and title clickable for each card on spotlight index page

--- a/website/src/components/community/styles.module.css
+++ b/website/src/components/community/styles.module.css
@@ -21,6 +21,7 @@ header.spotlightMemberCard {
   font-size: 2rem !important;
   margin-bottom: .5rem !important;
   color: #009999;
+  font-weight: 700;
 }
 .spotlightMemberContent .spotlightMemberDescription {
   margin-top: 1rem;
